--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: #000000;
   text-align: center;
-  padding: 50px;
+  padding: 100px;
 }
 
 h1 {
-  color: #333
+  color: #000000
