--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 body {
-  background-color: lightblue;
+  background-color: darkblue;
 }
 
 h1 {
-  color: black;
+  color: white;
   text-align: center;
 }
 
 p {
+  color: white;
   font-family: verdana;
   font-size: 20px;
+  text-align: center;
 }
